# CGAL_tests

./: AABB_segment_3_example.cpp  AABB_triangle_3_example.cpp  CMakeLists.txt  README.md  conforming.cpp  points_and_segments.cpp  searching_with_point_with_info_inplace.cpp  test.cpp  teste.cpp
